fixing style issue for image cropping

--- a/frontend_angular/src/app/app.component.scss
+++ b/frontend_angular/src/app/app.component.scss
@@ -16,10 +16,7 @@
 
 }
 
-.items-center{
-  display: flex;
-  justify-content: center;
-}
+
 
 .btn-primary{
   height: 30px;
